# wgslc

./: Cargo.toml  LICENSE  README.md  test.json
src/parser/: ast.rs  lex.rs  mod.rs  number.rs  token.rs
tests/: decl.wgsl  stmt.wgsl  wgsl_file.rs
