[package]
name = "wgsl-lang-pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
hexf = "0.2"
unicode-ident = "1"
strum = { version = "0.24", features = ["derive", "phf"] }
thiserror = "1.0.38"
phf = { version = "0.11", features = ["macros"] }

