[package]
name = "wgslc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
hexf = "0.2"
unicode-ident = "1"
strum = { version = "0.24", features = ["derive", "phf"] }
thiserror = "1.0.38"
phf = { version = "0.11", features = ["macros"] }
log = "0.4"
test-log = "0.2.11"
enums_arena = "0.1.4"
enums_arena_defines = "0.1"
superslice = "1.0.0"
nom-supreme = "0.8.0"
nom-tracable = "0.9.0"

[dev-dependencies]
env_logger = "0.10.0"
pretty_assertions = "1.3"
